--- a/res/xml/method.xml
+++ b/res/xml/method.xml
@@ -21,14 +21,4 @@
 <!-- for the Search Manager. -->
 
 <input-method xmlns:android="http://schemas.android.com/apk/res/android"
-        android:settingsActivity="com.example.android.softkeyboard.ImePreferences"
->
-    <subtype
-        android:label="@string/label_subtype_generic"
-        android:imeSubtypeLocale="en_US"
-        android:imeSubtypeMode="keyboard" />
-    <subtype
-        android:label="@string/label_subtype_en_GB"
-        android:imeSubtypeLocale="en_GB"
-        android:imeSubtypeMode="keyboard" />
-</input-method>
+        android:settingsActivity="com.sean.android.utils.thumbtype.ImePreferences" />
